032/instance.tf
provider "aws" {
  region = var.AWS_REGION
}

resource "aws_instance" "example" {
  ami = lookup(var.AMIS, var.AWS_REGION)
  instance_type = "t2.micro"

  #the vpc subnet
  subnet_id = aws_subnet.main-public-1.id

#the security group
vpc_security_group_ids = [aws_security_group.default.id]

#the public ssh key
key_name = aws_key_pair.mykeypair.key_name
}
